modules/cli/src/test/resources/good/syntax/inlinedunfolding/grecursion/Test01.scr
module good.syntax.inlinedunfolding.gdo.Test01;


global protocol Foo(role A, role B)
{
	choice at A
	{
		rec X  // Unguarded rec gets unfolded
		{
			1() from A to B;
			continue X;
		}
	}
	or
	{
		2() from A to B;
	}
}
